RESOLVED FIXED85069
Speech JavaScript API: Fix Vector use failure
https://bugs.webkit.org/show_bug.cgi?id=85069
Summary Speech JavaScript API: Fix Vector use failure
Hans Wennborg
Reported 2012-04-27 08:26:58 PDT
Speech JavaScript API: Fix Vector use failure
Attachments
Patch (3.31 KB, patch)
2012-04-27 08:28 PDT, Hans Wennborg
no flags
Hans Wennborg
Comment 1 2012-04-27 08:28:09 PDT
Satish Sampath
Comment 2 2012-04-27 08:42:05 PDT
Looks good to me
WebKit Review Bot
Comment 3 2012-04-27 13:28:49 PDT
Comment on attachment 139209 [details] Patch Clearing flags on attachment: 139209 Committed r115486: <http://trac.webkit.org/changeset/115486>
WebKit Review Bot
Comment 4 2012-04-27 13:28:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.