Speech JavaScript API: Fix Vector use failure https://bugs.webkit.org/show_bug.cgi?id=85069

Reviewed by Tony Gentilcore.

Fix think-o in code copying from WebVector to Vector.

* src/SpeechRecognitionClientProxy.cpp:
(WebKit::SpeechRecognitionClientProxy::didReceiveResult):
(WebKit::SpeechRecognitionClientProxy::didDeleteResult):
* src/WebSpeechRecognitionResult.cpp:
(WebKit::WebSpeechRecognitionResult::assign):


Canonical link: https://commits.webkit.org/102612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115486 268f45cc-cd09-0410-ab3c-d52691b4dbfc